--- a/PROYECTO MARCOS CARNICERIA/templates/contactanos.html
+++ b/PROYECTO MARCOS CARNICERIA/templates/contactanos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <script src="https://kit.fontawesome.com/283daa4351.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="icon" href="static/images/Logo-la-esquina-del-pana.ico">
@@ -24,13 +25,11 @@
                 <li><a href="sobre-nosotros.html#sn">SOBRE NOSOTROS</a></li>
                 <li><a href="contactanos.html#ct">CONTÁCTANOS</a></li>
             </ul>
-
             <a href="https://wa.link/2sgzlv" class="action_btn" target="_blank">HACE TU PEDIDO</a>
             <div class="toggle_btn">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
-
     <!-- Menu hamburguesa desplegable -->
         <div class="dropdown_menu">
             <ul>
@@ -42,25 +41,20 @@
             </ul>
         </div>
     </header>
-
     <main>
         <section id="description">
             <h1>Somos la Esquina del Pana</h1>
             <p>Tu lugar de confianza para encontrar cortes frescos, de calidad y con el sabor auténtico que solo un buen carnicero sabe ofrecer.</p>
             <p>Nos especializamos en brindar productos seleccionados con esmero, siempre frescos y listos para llevar a tu mesa</p>
-
         </section>
     </main>
-
     <section class="main-title" id="ct">
         <h1>- CONTACTANOS -</h1>
     </section>
-
     <div>
         <p class="info">Suipacha 2201, Lanus, Buenos Aires</p>
         <p class="info">+541128178012</p>
     </div>
-
     <!-- Formulario -->
     <form class="contact-form" action="https://formspree.io/f/xdknqppw" method="post">
         <h2>Formulario de Contacto</h2>
@@ -72,7 +66,8 @@
         <textarea id="comments" name="comments" placeholder="Escribe tus comentarios" rows="4" required></textarea>
         <button type="submit">Enviar</button>
     </form>
-
+    <!--Mapa-->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3279.3756416757356!2d-58.37860392349874!3d-34.72092466369887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccd4c0d44ea45%3A0x7fc78cf4dcc80dbc!2sSuipacha%202201%2C%20B1824%20Lan%C3%BAs%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1732666378196!5m2!1ses-419!2sar" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <!-- Footer -->
     <footer class="pie-pagina">
         <div class="grupo-1">
@@ -103,7 +98,7 @@
             <p>&copy; 2024 Carnicería el Pana - Todos los Derechos Reservados</p>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../static/js/script.js"></script>
 </body>
 
