--- a/PROYECTO MARCOS CARNICERIA/templates/productos.html
+++ b/PROYECTO MARCOS CARNICERIA/templates/productos.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/283daa4351.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="icon" href="static/images/Logo-la-esquina-del-pana.ico">
+    <link rel="icon" href="../static/images/Logo-la-esquina-del-pana.ico">
     <title>La esquina del pana</title>
 </head>
 <body>
@@ -24,13 +24,11 @@
                 <li><a href="sobre-nosotros.html#sn">SOBRE NOSOTROS</a></li>
                 <li><a href="contactanos.html#ct">CONTÁCTANOS</a></li>
             </ul>
-
             <a href="https://wa.link/2sgzlv" class="action_btn" target="_blank">HACE TU PEDIDO</a>
             <div class="toggle_btn">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
-
     <!-- Menu hamburguesa desplegable -->
         <div class="dropdown_menu">
             <ul>
@@ -42,24 +40,19 @@
             </ul>
         </div>
     </header>
-
     <main>
         <section id="description">
             <h1>Somos la Esquina del Pana</h1>
             <p>Tu lugar de confianza para encontrar cortes frescos, de calidad y con el sabor auténtico que solo un buen carnicero sabe ofrecer.</p>
             <p>Nos especializamos en brindar productos seleccionados con esmero, siempre frescos y listos para llevar a tu mesa</p>
-
         </section>
     </main>
-
     <!-- Título -->
     <section class="main-title" id="prod">
         <h1>- PRODUCTOS -</h1>
     </section>
-
     <!-- Productos -->
     <section class="product-sections">
-
         <!-- Carnicos -->
         <div class="section">
             <h2 class="products-group">Cárnicos</h2>
@@ -78,7 +71,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Aves -->
         <div class="section">
             <h2 class="products-group">Aves</h2>
@@ -97,7 +89,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Achuras -->
         <div class="section">
             <h2 class="products-group">Achuras</h2>
@@ -116,7 +107,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Embutidos -->
         <div class="section">
             <h2 class="products-group">Embutidos</h2>
@@ -136,8 +126,6 @@
             </div>
         </div>
     </section>
-
-
     <!-- Footer -->
     <footer class="pie-pagina">
         <div class="grupo-1">
@@ -148,14 +136,11 @@
                     </a>
                 </figure>
             </div>
-
-
             <div class="box">
                 <h2>CONOCE MÁS</h2>
                 <p>Seguinos en nuestras redes sociales para conocer nuestras ofertas, promociones y novedades</p>
                 <p>¡No te lo pierdas y disfruta de los mejores productos directo a tu mesa!</p>
             </div>
-
             <div class="box">
                 <h2>SEGUINOS EN REDES SOCIALES</h2>
                 <div class="red-social">
@@ -168,8 +153,8 @@
             <p>&copy; 2024 Carnicería el Pana - Todos los Derechos Reservados</p>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../static/js/script.js"></script>
+    <!-- <script src="../static/js/card.js"></script> -->
 </body>
-
 </html>
