--- a/PROYECTO MARCOS CARNICERIA/templates/sobre-nosotros.html
+++ b/PROYECTO MARCOS CARNICERIA/templates/sobre-nosotros.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <script src="https://kit.fontawesome.com/283daa4351.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="icon" href="static/images/Logo-la-esquina-del-pana.ico">
@@ -59,7 +60,7 @@
             </div>
             <h2>Cómo empezó todo</h2>
             <h3>Todo comenzó con un sueño...</h3>
-            <p>Ofrecer lo mejor para nuestra comunidad. Hace [X años], un par de soñadores se unió con un pensamiento común: ofrecer productos de calidad y hacer la diferencia. Con mucha pasión, perseverancia y el deseo de crear algo único, nació la Esquina del Pana, y con ese sueño en el corazón, trabajamos día a día para hacerlo realidad. Desde nuestros humildes comienzos hasta el día de hoy, seguimos comprometidos con la calidad y el servicio que nos han hecho llegar hasta aquí.</p>
+            <p>Ofrecer lo mejor para nuestra comunidad. Desde el 2023, un par de soñadores se unió con un pensamiento común: ofrecer productos de calidad y hacer la diferencia. Con mucha pasión, perseverancia y el deseo de crear algo único, nació la Esquina del Pana, y con ese sueño en el corazón, trabajamos día a día para hacerlo realidad. Desde nuestros humildes comienzos hasta el día de hoy, seguimos comprometidos con la calidad y el servicio que nos han hecho llegar hasta aquí.</p>
         </div>
         <div class="box">
             <div class="img">
@@ -113,6 +114,7 @@
             <p>&copy; 2024 Carnicería el Pana - Todos los Derechos Reservados</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../static/js/script.js"></script>
 </body>
 </html>
